--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spectra-auth",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A credentials-based auth solution for Next.js (and other Node projects) with IP rate-limiting, account lockouts, and sessions in DB.",
   "license": "MIT",
   "author": {
@@ -8,7 +8,11 @@
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist", "LICENSE", "README.md"],
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
