--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@prisma/client": "^6.3.1",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.4",
+    "argon2-browser": "^1.18.0",
     "cookie": "^1.0.2",
     "uncrypto": "^0.1.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/argon2-browser": "^1.18.4",
     "@types/node": "^22.13.1",
     "rimraf": "^6.0.1",
     "typescript": "^5.7.3",
