--- a/package.json
+++ b/package.json
@@ -1,39 +1,15 @@
 {
   "name": "spectra-auth",
-  "version": "0.0.0",
-  "description": "A credentials-based auth solution for Next.js (and other Node projects) with IP rate-limiting, account lockouts, and sessions in DB.",
-  "license": "MIT",
-  "author": {
-    "name": "Simon Fontaine"
-  },
+  "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": ["dist", "LICENSE", "README.md"],
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w",
-    "test": "vitest",
+    "clean": "rimraf dist",
     "typecheck": "tsc --noEmit",
     "lint": "biome check . --write",
-    "clean": "rimraf dist",
     "prepublishOnly": "pnpm run clean && pnpm run build"
-  },
-  "dependencies": {
-    "@prisma/client": "^6.3.1",
-    "@upstash/ratelimit": "^2.0.5",
-    "@upstash/redis": "^1.34.4",
-    "argon2-browser": "^1.18.0",
-    "cookie": "^1.0.2",
-    "uncrypto": "^0.1.3",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/argon2-browser": "^1.18.4",
-    "@types/node": "^22.13.1",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.7.3",
-    "vitest": "^3.0.5"
   },
   "keywords": [
     "authentication",
@@ -42,11 +18,26 @@
     "database-sessions",
     "nodejs-auth"
   ],
-  "publishConfig": {
-    "access": "public"
+  "author": "Simon Fontaine",
+  "license": "MIT",
+  "description": "A credentials-based auth solution for Next.js (and other Node projects) with IP rate-limiting, account lockouts, and sessions in DB.",
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^22.13.1",
+    "prisma": "^6.3.1",
+    "typescript": "^5.7.3"
   },
-  "engines": {
-    "node": ">=16"
+  "dependencies": {
+    "@noble/hashes": "^1.7.1",
+    "@prisma/client": "^6.3.1",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.4",
+    "cookie": "^1.0.2",
+    "lodash": "^4.17.21",
+    "ua-parser-js": "^2.0.1",
+    "uncrypto": "^0.1.3",
+    "zod": "^3.24.1"
   },
   "repository": {
     "type": "git",
