--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@biomejs/biome": "^1.9.4",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
     "prisma": "^6.3.1",
     "typescript": "^5.7.3"
   },
@@ -35,6 +36,7 @@
     "@upstash/redis": "^1.34.4",
     "cookie": "^1.0.2",
     "lodash": "^4.17.21",
+    "resend": "^4.1.2",
     "ua-parser-js": "^2.0.1",
     "uncrypto": "^0.1.3",
     "zod": "^3.24.1"
