--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^19.0.8",
     "jest": "^29.7.0",
     "prisma": "^6.3.1",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
