--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "aegis-auth",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/aegisAuth.js",
   "types": "dist/aegisAuth.d.ts",
-  "files": ["dist", "LICENSE", "README.md"],
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "jest",
