feat: updated config to be easier to use

--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "1.2.0",
   "main": "dist/aegisAuth.js",
   "types": "dist/aegisAuth.d.ts",
-  "files": [
-    "dist",
-    "LICENSE",
-    "README.md"
-  ],
+  "files": ["dist", "LICENSE", "README.md"],
   "scripts": {
     "build": "tsc",
     "test": "jest",
