--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "files": ["dist", "LICENSE", "README.md"],
   "scripts": {
     "build": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch",
     "clean": "rimraf dist",
     "typecheck": "tsc --noEmit",
     "lint": "biome check . --write",
@@ -25,17 +23,15 @@
   "description": "A credentials-based auth solution for Next.js (and other Node projects) with IP rate-limiting, account lockouts, and sessions in DB.",
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
-    "jest": "^29.7.0",
     "prisma": "^6.3.1",
     "rimraf": "^6.0.1",
-    "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@maxmind/geoip2-node": "^5.0.0",
     "@noble/hashes": "^1.7.1",
     "@prisma/client": "^6.3.1",
     "@upstash/ratelimit": "^2.0.5",
