feat: linted package

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SESSION_TOKEN_SECRET="change-me-in-prod"
-CSRF_SECRET="change-me-in-prod"
+CSRF_TOKEN_SECRET="change-me-in-prod"
 KV_REST_API_URL="https://..."
 KV_REST_API_TOKEN="..."
 NODE_ENV="development"
