--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "aegis-auth",
-  "version": "1.2.0",
-  "main": "dist/aegisAuth.js",
-  "types": "dist/aegisAuth.d.ts",
-  "files": ["dist", "LICENSE", "README.md"],
+  "version": "1.0.0",
+  "description": "",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
@@ -11,27 +11,12 @@
     "lint": "biome check . --write",
     "prepublishOnly": "pnpm run clean && pnpm run build"
   },
-  "keywords": [
-    "authentication",
-    "nextjs-auth",
-    "rate-limiting",
-    "database-sessions",
-    "nodejs-auth"
-  ],
+  "keywords": [],
   "author": "Simon Fontaine",
   "license": "MIT",
-  "description": "A credentials-based auth solution for Next.js (and other Node projects) with IP rate-limiting, account lockouts, and sessions in DB.",
-  "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@types/lodash": "^4.17.15",
-    "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "prisma": "^6.4.1",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.7.3"
-  },
+  "type": "commonjs",
   "dependencies": {
-    "@maxmind/geoip2-node": "^5.0.0",
+    "@maxmind/geoip2-node": "^6.0.0",
     "@noble/hashes": "^1.7.1",
     "@prisma/client": "^6.4.1",
     "@upstash/ratelimit": "^2.0.5",
@@ -39,16 +24,16 @@
     "cookie": "^1.0.2",
     "lodash": "^4.17.21",
     "resend": "^4.1.2",
-    "ua-parser-js": "^2.0.1",
+    "ua-parser-js": "^2.0.2",
     "uncrypto": "^0.1.3",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Simon-Fontaine/aegis-auth.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Simon-Fontaine/aegis-auth/issues"
-  },
-  "homepage": "https://github.com/Simon-Fontaine/aegis-auth#readme"
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^22.13.5",
+    "prisma": "^6.4.1",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.7.3"
+  }
 }
