--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ SESSION_TOKEN_SECRET="change-me-in-prod"
 CSRF_TOKEN_SECRET="change-me-in-prod"
 KV_REST_API_URL="https://..."
 KV_REST_API_TOKEN="..."
+DATABASE_URL="postgresql://..."
+MAXMIND_CLIENT_ID="change-me-in-prod"
+MAXMIND_LICENSE_KEY="change-me-in-prod"
 NODE_ENV="development"
-
-# optional
-RESEND_API_KEY="..."
