--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@types/chai": "^5.0.1",
     "@types/lodash": "^4.17.15",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.13.5",
+    "@types/sinon": "^17.0.4",
+    "chai": "^5.2.0",
+    "mocha": "^11.1.0",
     "prisma": "^6.4.1",
     "rimraf": "^6.0.1",
+    "sinon": "^19.0.2",
     "typescript": "^5.7.3"
   }
 }
